# wombat

./: .cproject  .project  CMakeLists.txt  ChangeLog  README
cmake/: FindMatlab.cmake  FindPtc.cmake  FindSIFT.cmake  FindStdMac.cmake
src/: CMakeLists.txt
src/app/QPtcPlayer/: CMakeLists.txt  main.cpp
src/app/QPtcPlayer/modules/: FileReaderThread.cpp  FileReaderThread.h  RenderThread.cpp  RenderThread.h
src/app/QPtcPlayer/widgets/: PtcPlayer.cpp  PtcPlayer.h  PtcPlayerBase.ui
src/app/QWombatModelBuilder/: BuilderMainWindow.cpp  BuilderMainWindow.h  BuilderMainWindowBase.ui  CMakeLists.txt  main.cpp
src/app/QWombatModelBuilder/widgets/: BodyJointEditor.cpp  BodyJointEditor.h  BodyJointEditorBase.ui  BodyPartEditor.cpp  BodyPartEditor.h  BodyPartEditorBase.ui  DofEditor.cpp  DofEditor.h  DofEditorBase.ui
src/app/QWombatWorkspace/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindowBase.ui  main.cpp
src/app/QWombatWorkspace/dialogs/: NewProjectDialog.cpp  NewProjectDialog.h  NewProjectDialogBase.ui  SettingsDialog.cpp  (+6 more)
src/lib/: CMakeLists.txt
src/lib/wombat/: CMakeLists.txt  basetypes.h  body.h  core.h  filters.h  helpers.h  math.h  voxels.h  wombat.h
src/lib/wombat/basetypes/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BaseTypes.h  Enums.h  Exception.cpp  Exception.h  Pose.cpp  Pose.h  PtcFrameData.cpp  PtcFrameData.h  Viewpoint.h
src/lib/wombat/basetypes/stateSpace/: AbstractDouble.cpp  AbstractDouble.h  CircularDouble.cpp  CircularDouble.h  LimitedDouble.cpp  LimitedDouble.h  ReflectiveDouble.cpp  ReflectiveDouble.h  StateVector.hpp  StateVectorLimiter.hpp
src/lib/wombat/bindings/ptc/: VoxelReader.cpp  VoxelReader.h  VoxelspaceReader.cpp  VoxelspaceReader.hpp  VoxelspaceWriter.cpp  VoxelspaceWriter.h
src/lib/wombat/body/: Body.cpp  Body.h  BodyConfiguration.h  BodyFactory.h  BodyNodeTree.cpp  BodyNodeTree.h  BodyNodes.cpp  BodyNodes.h  BodyObservationModel.cpp  BodyObservationModel.h  BodyStateVector.cpp  BodyStateVector.h  BodyStateVectorFunctions.cpp  BodyStateVectorFunctions.h  BodyStructures.cpp  BodyStructures.h
src/lib/wombat/body/Configurators/: AbstractBodyConfigurator.cpp  AbstractBodyConfigurator.h
src/lib/wombat/body/Configurators/Native/: NativeBodyConfigurator.cpp  NativeBodyConfigurator.h
src/lib/wombat/body/Parts/: AbstractBodyPart.cpp  AbstractBodyPart.h  CylinderBodyPart.cpp  CylinderBodyPart.h  CylinderRasterizer.h  EllipsoidBodyPart.cpp  EllipsoidBodyPart.h
src/lib/wombat/filters/: AbstractDiffusionStrategy.hpp  AbstractModeSelector.hpp  AbstractObservationModel.hpp  AnnealedParticleFilter.hpp  BestParticleExtractor.hpp  FilterSpecialization.hpp  Particle.hpp  ParticleStorage.hpp  RandomParticleExtractor.hpp
src/lib/wombat/filters/diffusion/: AlphaDiffusionStrategy.hpp  ConstantDiffusionStrategy.hpp  CovarianceDiffusionStrategy.hpp  VarianceDiffusionStrategy.hpp
src/lib/wombat/filters/generator/: AbstractParticleGenerator.hpp  GaussianParticleGenerator.hpp  IterativeParticleGenerator.hpp  RandomFieldParticleGenerator.hpp
src/lib/wombat/filters/modes/: MedianModeSelector.hpp  PeakModeSelector.hpp  WeightedMedianModeSelector.hpp
src/lib/wombat/filters/partitions/: Partition.cpp  Partition.h
src/lib/wombat/helpers/: CmdLineParser.cpp  CmdLineParser.h  Logger.cpp  Logger.h  StlAlgorithms.hpp  StringSerialization.cpp  StringSerialization.h  StringUtils.cpp  StringUtils.h  Timer.cpp  Timer.h  debug.h
src/lib/wombat/helpers/messaging/: AbstractMessageWriter.cpp  AbstractMessageWriter.h  FileMessageWriter.cpp  FileMessageWriter.h  StandardMessageWriter.cpp  StandardMessageWriter.h
src/lib/wombat/helpers/opengl/: GLUtils.h
src/lib/wombat/math/: constants.h  normalize.h  transform.cpp  transform.h
src/lib/wombat/voxels/: Voxel.hpp  VoxelValueReflections.h  VoxelValues.h  Voxelspace.hpp  VoxelspaceMeta.h
src/lib/wombat/voxels/functions/: SymmetricVoxelspaceIntersector.cpp  SymmetricVoxelspaceIntersector.h  VoxelspaceIntersector.h
src/lib/wombatui_qt/: CMakeLists.txt  wombatui_qt.h
src/lib/wombatui_qt/backends/: BodyPartXmlBackend.cpp  BodyPartXmlBackend.h  NativeBodyXmlBackend.cpp  NativeBodyXmlBackend.h  QBodyPartXmlBackend.cpp  QBodyPartXmlBackend.h  QNativeBodyXmlBackend.cpp  QNativeBodyXmlBackend.h
src/lib/wombatui_qt/helpers/: QGlobalState.cpp  QGlobalState.h  QMessageWriter.cpp  QMessageWriter.h  QStringUtils.cpp  QStringUtils.h  QWombatProject.cpp  QWombatProject.h
src/lib/wombatui_qt/resources/: wombat.qrc
src/lib/wombatui_qt/widgets/: AnnealedParticleFilterHistoryWidget.cpp  AnnealedParticleFilterHistoryWidget.h  AnnealedParticleFilterHistoryWidgetBase.ui  BodyConfiguratorWidget.cpp  BodyConfiguratorWidget.h  BodyConfiguratorWidgetBase.ui  PartitionEditorWidget.cpp  PartitionEditorWidget.h  PartitionEditorWidgetBase.ui  PlaybackControlBase.ui  QPlaybackControl.cpp  QPlaybackControl.h  ScalarSelectionWidget.cpp  ScalarSelectionWidget.h  ScalarSelectionWidgetBase.ui  TrackerControlWidget.cpp  TrackerControlWidget.h  TrackerControlWidgetBase.ui
src/lib/wombatui_qt/widgets/BodyConfigurator/: ConfiguratorWidget.cpp  ConfiguratorWidget.h  ConfiguratorWidgetBase.ui  MatlabConfiguratorWidget.cpp  MatlabConfiguratorWidget.h  MatlabConfiguratorWidgetBase.ui  NativeConfiguratorWidget.cpp  NativeConfiguratorWidget.h  NativeConfiguratorWidgetBase.ui
src/lib/wombatui_qt/widgets/RenderWidget/: AbstractRenderEngine.cpp  AbstractRenderEngine.h  BodyRenderEngine.cpp  BodyRenderEngine.h  BodySpacesRenderEngine.cpp  BodySpacesRenderEngine.h  CoordAxisRenderEngine.cpp  CoordAxisRenderEngine.h  FrustumRenderEngine.cpp  FrustumRenderEngine.h  GLRenderWidget.cpp  GLRenderWidget.h  GridRenderEngine.cpp  GridRenderEngine.h  GroundRenderEngine.cpp  GroundRenderEngine.h  PointCloudRenderEngine.cpp  PointCloudRenderEngine.h  PrimitivesRenderEngine.cpp  PrimitivesRenderEngine.h  StickmodelRenderEngine.cpp  StickmodelRenderEngine.h  VoxelRenderEngine.cpp  VoxelRenderEngine.h  VoxelspaceRenderEngine.hpp
src/tests/: CMakeLists.txt
src/tests/logging/: CMakeLists.txt  logging_suite.cpp  logging_suite.h
(+13 files in other folders)
