include_directories(${CMAKE_BINARY_DIR}/src/lib/wombat)
include_directories(${CMAKE_BINARY_DIR}/src/lib/wombatui_qt)

file(GLOB_RECURSE SOURCES "*.cpp")
file(GLOB_RECURSE HEADERS "*.h")
file(GLOB_RECURSE UI_FILES "*.ui")
file(GLOB_RECURSE RESOURCES "*.qrc")

QT4_ADD_RESOURCES( QT_RESOURCES ${RESOURCES} )
QT4_WRAP_UI( QT_UI_FILES ${UI_FILES} )
QT4_WRAP_CPP( QT_HEADERS ${HEADERS} )

include_directories(${QT_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR} "../../lib")

SET(CMAKE_SKIP_BUILD_RPATH  TRUE)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
SET(CMAKE_INSTALL_RPATH "${QT_LIBRARY_DIR}:${MyPET_SOURCE_DIR}/lib/${CMAKE_SYSTEM_NAME}/;${MATLAB_LIB_DIR}/:${QT_LIBRARY_DIR}")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

add_executable( ptcPlayer ${SOURCES} ${HEADERS} ${QT_RESOURCES} ${QT_UI_FILES} ${QT_HEADERS})

target_link_libraries( ptcPlayer wombat wombatui_qt ${GLUT_LIBRARIES} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY}
    ${QT_QTXML_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${PTC_LIBRARY} )
add_dependencies(ptcPlayer wombatui_qt wombat)
